# ESP32-Remote-USB-HID

./: .gitignore  PartsOrder.xlsx  readme.md  temp.py
F_PANEL Shim/: F_PANEL Shim.kicad_pcb  F_PANEL Shim.kicad_prl  F_PANEL Shim.kicad_pro  F_PANEL Shim.kicad_sch
Notes/: tps62823 calcs.xls
Parts/DFE201610E_R47M_P2/: DFE201610E-R47M_P2.kicad_sym  INDC2016X100N.kicad_mod
Parts/EVQ-P7L01P/: SW_EVQ-P7L01P.kicad_mod
Parts/HiLetGo 0.95in OLED SSD1331 SPI/: OLED 0.95in 96x128 SPI_No_Bottom_Drill_Holes.kicad_mod  hiletgo 0.95in oled 96x128 ssd1331 spi.kicad_sym
Parts/Samtec 2x10 SMT Female RA - SMH_110_02_L_D/: SAMTEC-SMH-110-02-X-D.kicad_mod  SAMTEC-SMH-110-02-X-D.kicad_sym  SAMTEC-SMH-110-02-X-D.step
Parts/Samtec 2x10 SMT Male RA - TSM_110_02_L_DH/: SAMTEC_TSM-110-02-L-DH.kicad_mod  TSM-110-02-L-DH.kicad_sym  TSM-110-02-L-DH.step
USBHIDKey/: USB-HID-Key-Parts.bak  USB-HID-Key-Parts.kicad_sym  USBHIDKey.kicad_pcb  USBHIDKey.kicad_prl  USBHIDKey.kicad_pro  USBHIDKey.kicad_sch  esp32.kicad_sch  fp-lib-table  power.kicad_sch  q_npn_generic_bec.kicad_sym  sym-lib-table  usb-uart.kicad_sch  ~USBHIDKey.kicad_sch.lck
USBHIDKey/USB-HID-Key-Parts.pretty/: BM04B-SRSS-TB_LFSN_.kicad_mod  DFE201610E-R47M=P2.kicad_mod  OLED 0.95in 96x128 SPI.kicad_mod  OLED 0.95in 96x128 SPI_No_Bottom_Drill_Holes.kicad_mod  SW_EVQ-P7L01P.kicad_mod  (+1 more)
esp32-firmware/: usb-hid-kybd.code-workspace
esp32-firmware/usb-hid-kybd/main/: CMakeLists.txt  Kconfig.projbuild  globals.c  globals.h  gpios.h  httpd.c  httpd.h  main.c
images/: kicad-logo.png~
scripts/: bulk-change-fonts-kicad-pcb.py
(+83 files in other folders)
